# smarthome

./: Makefile  README.md  Reset.sh
client/linux/: Makefile
client/linux/src/: Makefile  main.c  media.c  media.h
client/qt/: UI
client/qt/Qt_Proj/UI/: UI.pro  UI.pro.user.36ca81b.22  adddevice.cpp  adddevice.h  adddevice.ui  aircondition.cpp  aircondition.h  aircondition.ui  aironoff.cpp  aironoff.h  aironoff.ui  firstwidget.cpp  firstwidget.h  firstwidget.ui  fridge.cpp  fridge.h  fridge.ui  fridgewarning.cpp  fridgewarning.h  fridgewarning.ui  logwidget.cpp  logwidget.h  logwidget.ui  main.cpp  (+15 more)
device/: Makefile
device/airConditioning/: Makefile  air_conditioning  main.c
device/refrigerator/: Makefile
device/refrigerator/live/: Makefile
device/refrigerator/src/: Makefile  WW_H264VideoServerMediaSubsession.cpp  WW_H264VideoServerMediaSubsession.h  WW_H264VideoSource.cpp  WW_H264VideoSource.h  main.cpp  video.cpp  video.h
mytest/: a.out  server_user.c
output/: AirRun.sh  ClientRun.sh  RefRun.sh  ServerRun.sh
output/client/linux/: linux_client
output/device/refrigerator/: refrigerator
output/server/server_device/: server_device
output/server/server_master/: master  server_monitor.sh  url
output/server/server_user/: server_user
server/: Makefile
server/database/: smarthome_server.db
server/include/: message.h
server/server_alarm/: Makefile  main.c  server_alarm
server/server_device/: Makefile  main.c
server/server_master/: Makefile  main.c  server_close.sh  url
server/server_media/: CMakeLists.txt  Makefile
server/server_media/live/mediaServer/: live555MediaServer.cpp
server/server_media/src/: Makefile  main.cpp  server_media  video.cpp  video.h
server/server_user/: Makefile  main.c  server_user  user_info.c  user_info.h  user_login.c  user_login.h  user_manager.c  user_manager.h  user_register.c  user_register.h
(+4 files in other folders)
